@@ -99,7 +99,7 @@ PROJ_SCALE_FACTOR		= default
 PS_CHAR_ENCODING		= @PS_CHAR_ENCODING@
 PS_COLOR_MODEL			= rgb
 PS_COMMENTS			= false
-PS_DPI				= 300
+PS_DPI				= 1200
 PS_IMAGE_COMPRESS		= lzw
 PS_LINE_CAP			= butt
 PS_LINE_JOIN			= miter
